--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,6 +5,10 @@
 @include font-face(sourcesans, '/fonts/sourcesanspro-light-webfont');
 @include font-face(sourcesans, '/fonts/sourcesanspro-semibold-webfont', bold);
 
+* {
+  box-sizing: border-box;
+}
+
 // base
 body {
   background: #f9fafb;
@@ -40,7 +44,9 @@ h4, h5, h6 {
 }
 
 a {
+  color: #1b2955;
   text-decoration: none;
+  &:hover { color: lighten(#1b2955, 15); }
 }
 
 ul, ol {
@@ -85,6 +91,28 @@ header {
   }
 }
 
+.intro {
+  @extend .extra-inner;
+
+  font-size: 0;
+  margin-bottom: 0;
+  padding-bottom: 2.2%;
+  padding-top: 4.5%;
+  position: relative;
+
+  p {
+    display: inline-block;
+    font-size: 17px;
+    vertical-align: middle;
+  }
+
+  .desc { width: 80%; }
+  .about-btn-wrap {
+    text-align: right;
+    width: 20%;
+  }
+}
+
 .main {
   @extend .inner;
 
@@ -105,4 +133,60 @@ footer {
 
 .logo {
   max-width: 180px;
+}
+
+// modules
+.flat-btn {
+  background: #c0d1e5;
+  color: #3b72b8;
+  font-size: 13px;
+  font-weight: bold;
+  padding: 0.55em 1.2em 0.45em;
+  text-transform: uppercase;
+
+  &:hover {
+    background: darken(#c0d1e5, 5);
+  }
+}
+
+.plain {
+  list-style-type: none;
+  margin-left: 0;
+}
+
+.classy-list {
+  @extend .plain;
+  li {
+    border-bottom: 1px solid #afc7e6;
+    &:last-child { border-bottom-width: 0; }
+  }
+}
+
+.classy-list-item {
+  display: block;
+  font-size: 0;
+  padding: 2.8%;
+
+  &:hover {
+    background: #e1ebf9;
+    .classy-list-title { color: #002495; }
+  }
+}
+
+.classy-list-title,
+.classy-list-desc {
+  display: inline-block;
+  font-size: 18px;
+  vertical-align: middle;
+}
+
+.classy-list-title {
+  font-weight: bold;
+  margin-right: 5%;
+  padding-right: 10%;
+  width: 55%;
+}
+
+.classy-list-desc {
+  width: 40%;
 }
