--- a/css/styles.scss
+++ b/css/styles.scss
@@ -99,12 +99,21 @@ header {
     -webkit-font-smoothing: antialiased;
     font-size: 21px;
     margin-bottom: 0;
+    padding-left: 1.48em;
+    position: relative;
+
+    &:before {
+      content: "\269e";
+      font-family: icons;
+      font-size: 17px;
+
+      position: absolute;
+      left: 0;
+      top: 3px;
+    }
   }
 
-  a {
-    font-size: 16px;
-  }
-
+  a { font-size: 16px; }
   h1, a { color: #fff; }
 }
 
@@ -174,15 +183,27 @@ footer {
 }
 
 .flat-btn-preview {
+  -webkit-font-smoothing: antialiased;
   background: #3b72b8;
   color: #fff;
   display: inline-block;
   font-size: 16px;
   font-weight: bold;
   padding: 0.55em 1.2em 0.45em;
+  position: relative;
   text-align: left;
 
   &:hover { background: darken(#3b72b8, 5); color: #fff; }
+  &:after {
+    content: "\2192";
+    font-family: icons;
+    font-size: 12px;
+    margin-top: -7px;
+
+    position: absolute;
+    right: 1.6em;
+    top: 50%;
+  }
 }
 
 .plain {
@@ -225,6 +246,28 @@ footer {
 
 .classy-list-desc {
   width: 40%;
+}
+
+.back {
+  &:before,
+  &:after {
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-family: icons;
+    margin-top: -1px;
+    vertical-align: middle;
+  }
+
+  &:after {
+    content: "\269e";
+    margin-left: 0.7em;
+  }
+
+  &:before {
+    content: "\2190";
+    font-size: 12px;
+    margin-right: 1.6em;
+  }
 }
 
 .book-wrap {
