--- a/css/styles.scss
+++ b/css/styles.scss
@@ -104,11 +104,12 @@ header {
   color: #fff;
   text-transform: uppercase;
   text-shadow: 0px 2px 1px #275ea5;
-  padding: 0.7em 22px;
+  padding: 0.7em 3.25%;
 
   h1 {
     -webkit-font-smoothing: antialiased;
     font-size: 21px;
+    line-height: 1.2;
     margin-bottom: 0;
     padding-left: 1.48em;
     position: relative;
@@ -120,7 +121,7 @@ header {
 
       position: absolute;
       left: 0;
-      top: 3px;
+      top: 2px;
     }
   }
 
