--- a/css/styles.scss
+++ b/css/styles.scss
@@ -102,31 +102,75 @@ header {
 .top-banner {
   background: #3b72b8;
   color: #fff;
+  display: block;
   text-transform: uppercase;
   text-shadow: 0px 2px 1px #275ea5;
-  padding: 0.7em 3.25%;
+  padding: 0.85em 3.25% 0.75em;
 
   h1 {
+    @extend .site-title;
     -webkit-font-smoothing: antialiased;
+    color: #fff;
     font-size: 21px;
-    line-height: 1.2;
     margin-bottom: 0;
-    padding-left: 1.48em;
-    position: relative;
+  }
+}
 
-    &:before {
-      content: "\269e";
-      font-family: icons;
-      font-size: 17px;
+.site-title {
+  line-height: 1.2;
+  padding-left: 1.38em;
+  text-indent: 0.1em;
+  position: relative;
 
-      position: absolute;
-      left: 0;
-      top: 2px;
-    }
+  &:before {
+    -webkit-font-smoothing: antialiased;
+    content: "\269e";
+    font-family: icons;
+    font-size: 17px;
+
+    position: absolute;
+    left: -0.1em;
+    top: 2px;
+  }
+}
+
+a.top-banner {
+  @include transition(all, linear, 0.4s);
+  cursor: pointer;
+  letter-spacing: 0.03em;
+  opacity: 0.85;
+
+  &:hover {
+    color: #fff;
+    opacity: 1;
+
+    .back-wrap { max-width: 260px; }
+    .site-title { max-width: 1em; }
   }
 
-  a { font-size: 16px; }
-  h1, a { color: #fff; }
+  .back,
+  .site-title {
+    display: inline-block;
+    font-size: 16px;
+    vertical-align: middle;
+    white-space: nowrap;
+  }
+
+  .back-wrap {
+    @include transition(all ease-in-out 0.42s);
+  }
+
+  .site-title {
+    @include transition(all ease-in-out 0.3s);
+    color: #e0e9f5;
+    max-width: 400px;
+    overflow: hidden;
+
+    &:before {
+      font-size: 16px;
+      top: 0;
+    }
+  }
 }
 
 .intro {
@@ -269,25 +313,36 @@ footer {
   width: 40%;
 }
 
-.back {
-  &:before,
-  &:after {
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    font-family: icons;
-    margin-top: -1px;
-    vertical-align: middle;
-  }
+.back-wrap {
+  // @include transition(all, linear, 0.5s);
+  display: inline-block;
+  font-size: 16px;
+  line-height: 1.2;
+  max-width: 0;
+  vertical-align: middle;
+  overflow: hidden;
+}
 
-  &:after {
-    content: "\269e";
-    margin-left: 0.7em;
-  }
+.back {
+  line-height: 1.2;
+  // margin-top: -1px;
+  padding-left: 1.8em;
+  padding-right: 0.65em;
+  position: relative;
+  text-align: right;
 
   &:before {
+    -webkit-font-smoothing: antialiased;
     content: "\2190";
+    display: inline-block;
+    font-family: icons;
     font-size: 12px;
-    margin-right: 1.6em;
+    margin-top: -1px;
+    vertical-align: middle;
+
+    position: absolute;
+    left: 0;
+    top: 3px;
   }
 }
 
