Corriger l'espacement entre les informations de l'index

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -385,6 +385,10 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+  .classy-list-title {
+    padding-right: 0;
+  }
+
   .book-infos,
   .book-preview {
     margin-right: 0;
