Corriger le style de l'entête d'une fiche pour les résolutions plus petites

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -405,4 +405,9 @@ footer {
   }
 
   .book-thumb { display: none; }
+
+  a.top-banner {
+    .site-title { white-space: normal; }
+    .back-wrap { display: none; }
+  }
 }
