--- a/liseuse/css/edsa.css
+++ b/liseuse/css/edsa.css
@@ -1,4 +1,5 @@
-@charset "UTF-8";article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+@charset "UTF-8";
+article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
 fieldset, input, select, button, textarea, figure {
@@ -48,10 +49,11 @@ img {
 
 [hidden] {
   display: none; }
+
 @font-face {
   font-family: 'edsa-icons';
-  src: url("edsa-icons.eot");
-  src: url("edsa-icons.eot?#iefix") format("embedded-opentype"), url("edsa-icons.woff") format("woff"), url("edsa-icons.ttf") format("truetype"), url("edsa-icons.svg#edsa-icons") format("svg");
+  src: url("../fonts/edsa-icons.eot");
+  src: url("../fonts/edsa-icons.eot?#iefix") format("embedded-opentype"), url("../fonts/edsa-icons.woff") format("woff"), url("../fonts/edsa-icons.ttf") format("truetype"), url("../fonts/edsa-icons.svg#edsa-icons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -81,7 +83,6 @@ img {
   data-icon="b" - books
 
 */
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -1264,7 +1265,7 @@ footer:before {
     header .advanced-menu {
       border-width: 0; }
     header .wrap:before {
-      content: " "; }
+      content: " "; }
     header .button-advanced-menus span {
       top: -22px; }
 
