--- a/liseuse/css/edsa.css
+++ b/liseuse/css/edsa.css
@@ -139,6 +139,13 @@ option {
   max-width: 540px;
   margin: auto; }
 
+.book-title {
+  max-width: 100%;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: middle; }
+
 .columns {
   font-size: 0; }
 
@@ -1038,12 +1045,13 @@ footer {
     margin: 0 0 8px -107px;
     pointer-events: none; }
   .anchors select {
-    width: 100%;
-    display: block; }
+    display: block;
+    font-size: 12px;
+    width: 100%; }
 
 .anchors.opened .popup {
-  z-index: 2;
-  opacity: 1; }
+  opacity: 1;
+  z-index: 2; }
   .anchors.opened .popup .column {
     pointer-events: all; }
 
@@ -1270,20 +1278,20 @@ footer:before {
       top: -22px; }
 
   .book-title {
-    opacity: 0;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding: .4em .6em;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    background-color: #f5f5f5;
     -webkit-transition: opacity 0.2s;
     -moz-transition: opacity 0.2s;
     -ms-transition: opacity 0.2s;
-    transition: opacity 0.2s; }
+    transition: opacity 0.2s;
+    background-color: #f5f5f5;
+    opacity: 0;
+    overflow: hidden;
+    padding: .4em .6em;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0; }
 
   .show-advanced-menus .book-title {
     opacity: 1; }
